<resources>
    <string name="app_name">Quake Alert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="kbc_icon">KBC Icon</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="life_line_50_50">50:50</string>
    <string name="life_line_flip_the_question">Flip The Question</string>
    <string name="life_line_expert_advice">Expert Advice</string>
    <string name="life_line_double_tip">Double Tip</string>
    <string name="play">Play</string>
    <string name="ok">OK</string>
    <string name="continue_game">Continue Game</string>
    <string name="title_activity_play_game">Play The Game</string>
    <string name="title_activity_output">KBC 2018</string>
    <string name="title_activity_high__scores">High_Scores</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name_input"> Enter your Name....</string>
    <string name="kbc_small">KBC Small</string>
    <string name="name_empty_warning">Name can\'t be empty!!!</string>
    <string name="continue_as_prefix">Continue as</string>
    <string name="quit_warning">Do your really want to Quit?</string>
    <string name="are_you_sure_warning">Are you sure??</string>
    <string name="double_tip_warning">Use Life Line Double Tip?(Two Chances are given to guess the Right Answer)</string>
    <string name="right_answer_loud">RIGHT ANSWER!!!</string>
    <string name="continue_game_later_warning">Continue the Game Later??</string>
    <string name="music_volume">Music Volume</string>
    <string name="choose_topics">Choose Topics…</string>
    <string name="pick_topics">Choose the topics…</string>
    <string name="cancel">Cancel</string>
    <string name="life_lines">-Life Lines-</string>
    <string name="player_name_description">Player Name</string>
    <string name="question_background">Question Background</string>
    <string name="option">Option Background</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_loud">\u2022\u2022\u2022\u2022INSTRUCTIONS\u2022\u2022\u2022\u2022\n(Scroll down to continue)</string>
    <string name="no_high_scores_available">No High Scores Available…</string>
    <string name="question_detail">\u2022 Question 1\n\u2022 Question 2\n\u2022 Question 3\n\u2022 Question 4\n\u2022 Question 5\n\u2022 Question 6\n\u2022 Question 7\n\u2022 Question 8\n\u2022 Question 9\n\u2022 Question 10\n\u2022 Question 11\n\u2022 Question 12\n\u2022 Question 13\n\u2022 Question 14\n\u2022 Question 15</string>
    <string name="question_counter_rupees">₹5,000\n₹10,000\n₹20,000\n₹40,000\n₹80,000\n₹1,60,000\n₹3,20,000\n₹6,40,000\n₹12,50,000\n₹25 Lakhs\n₹50 Lakhs\n₹1 Crore\n₹3 Crores\n₹5 Crores\n₹7 Crores</string>
    <string name="questions_tab">Questions</string>
    <string name="question_1_to_15_description">\u2022Question 1 to 6 (Easy) are from various disasters like earthquake, Floods, Tsunami, etc. with a 30 second timer.\n\n\u2022Question 7 to 15 (Hard) are also from disasters but without timer.</string>
    <string name="change_topics_text">You can change these topics anytime in Settings.</string>
    <string name="change_anytime_in_settings">Life Lines</string>
    <string name="life_line_description">\u202250:50 Removes two wrong answers\n\n \u2022Flip the Question Shows another question instead of the asked one \n\n\u2022Expert Advice Shows the right answer with 90% probability  \n\n\u2022Double Tip Give two chances to choose the right answer  \n\nNote:Both 50:50 and double tip can’t be used simultaneusly in the same question \n\nYou can read these instructions any time in settings</string>
    <string name="don_nt_show_again">Don\'t show again</string>
    <string name="list_15_question">There are total 15 questions having following values.</string>
</resources>
