<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="#150931"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/instructions"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/instructions_loud" />

            <TextView
                android:id="@+id/tv_msg"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/list_15_question" />
            <LinearLayout
                android:id="@+id/ll_question_rupees_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <TextView
                    android:id="@+id/questions_display"
                    style="@style/text_style_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/question_detail" />
                <TextView
                    android:id="@+id/questions_display_rupees"
                    style="@style/text_style_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/question_counter_rupees" />
            </LinearLayout>
            <!-- TODO html format-->
            <TextView
                android:id="@+id/question_header"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/questions_tab" />

            <TextView
                android:id="@+id/question_1_to_15_description"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_to_15_description" />

            <TextView
                android:id="@+id/change_topics_text"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/change_topics_text" />

            <TextView
                android:id="@+id/change_anytime_in_settings"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/change_anytime_in_settings" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/life_lines"
                android:src="@drawable/life_lines" />

            <TextView
                style="@style/text_style_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/life_line_description" />

            <ImageView
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/ok"
                android:src="@drawable/ok" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>