<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#150931"
    android:orientation="vertical"
    tools:context=".PlayGame">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_playername"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/player_name_description"
            android:src="@drawable/option_bg" />

        <TextView
            android:id="@+id/tv_playername"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignTop="@id/img_playername"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textStyle="italic|bold" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textView"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_life_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/life_line_50_50"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/life_line_50_50"
            android:onClick="showConfirmLifeLine"
            android:src="@drawable/a"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/life_line_flip_the_question"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="3dp"
            android:layout_toEndOf="@+id/life_line_50_50"
            android:layout_toRightOf="@+id/life_line_50_50"
            android:contentDescription="@string/life_line_flip_the_question"
            android:onClick="showConfirmLifeLine"
            android:src="@drawable/b"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/life_line_expert_advice"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_toEndOf="@+id/life_line_flip_the_question"
            android:layout_toRightOf="@+id/life_line_flip_the_question"
            android:contentDescription="@string/life_line_expert_advice"
            android:onClick="showConfirmLifeLine"
            android:src="@drawable/c" />

        <ImageView
            android:id="@+id/life_line_double_tip"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/life_line_expert_advice"
            android:layout_toRightOf="@+id/life_line_expert_advice"
            android:contentDescription="@string/life_line_double_tip"
            android:onClick="showConfirmLifeLine"
            android:src="@drawable/d" />

        <ImageView
            android:id="@+id/cross_img_background_option_one"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/life_line_50_50"
            android:layout_alignLeft="@+id/life_line_50_50"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/life_line_50_50"
            android:layout_alignStart="@+id/life_line_50_50"
            android:contentDescription="@string/life_line_50_50" />

        <ImageView
            android:id="@+id/cross_img_background_option_two"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/life_line_flip_the_question"
            android:layout_alignLeft="@+id/life_line_flip_the_question"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/life_line_flip_the_question"
            android:layout_alignStart="@+id/life_line_flip_the_question"
            android:contentDescription="@string/life_line_flip_the_question" />

        <ImageView
            android:id="@+id/cross_img_background_option_three"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/life_line_expert_advice"
            android:layout_alignLeft="@+id/life_line_expert_advice"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/life_line_expert_advice"
            android:layout_alignStart="@+id/life_line_expert_advice"
            android:contentDescription="@string/life_line_expert_advice" />

        <ImageView
            android:id="@+id/cross_img_background_option_four"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/life_line_double_tip"
            android:layout_alignLeft="@+id/life_line_double_tip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/life_line_double_tip"
            android:layout_alignStart="@+id/life_line_double_tip"
            android:contentDescription="@string/life_line_double_tip" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/img_background_question"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/question_background"
            android:src="@drawable/question" />

        <TextView
            android:id="@+id/tv_question"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/img_background_question"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_money"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/msg_in_playGame"
            android:layout_alignRight="@+id/msg_in_playGame"
            android:layout_alignTop="@+id/img_background_question"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#F6BB63"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/msg_in_playGame"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_question"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            tools:ignore="RelativeOverlap" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:id="@+id/img_background_option_one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/option"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/option_bg" />

            <ImageView
                android:id="@+id/img_background_option_two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/option"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/option_bg" />

            <ImageView
                android:id="@+id/img_background_option_three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/option"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/option_bg" />

            <ImageView
                android:id="@+id/img_background_option_four"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/option"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/option_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/answer_option_one"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/answer_option_two"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/answer_option_three"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/answer_option_four"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="isAnswerCorrect"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
</ScrollView>